<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@id/divider1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/small_margin"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/textResult"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TIL_number"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:background="@color/dividerColor"
        app:layout_constraintBottom_toTopOf="@+id/TIL_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="28dp"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:layout_marginTop="@dimen/big_margin"
        android:hint="@string/text_hint"
        app:endIconMode="clear_text"
        app:helperText="@string/helper_Text_required"
        app:layout_constraintBottom_toTopOf="@+id/tvResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:startIconDrawable="@drawable/ic_circle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TIET_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAdd"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/textbuttonadd"
        app:icon="@drawable/ic_add"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/checkBoxDetail"
        app:layout_constraintEnd_toStartOf="@+id/buttonClear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal"
        android:layout_marginBottom="@dimen/default_margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClear"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/textbuttondelete"
        app:icon="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toTopOf="@id/checkBoxDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/buttonAdd"
        app:layout_constraintTop_toBottomOf="@+id/tvTotal"
        android:layout_marginBottom="@dimen/default_margin"/>

    <CheckBox
        android:id="@+id/checkBoxDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/text_cb"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/divider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




    <View
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:background="@color/dividerColor"
        android:layout_marginTop="@dimen/big_margin"
        app:layout_constraintTop_toBottomOf="@id/checkBoxDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_percent2"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        android:gravity="center"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginHorizontal="@dimen/default_margin"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_number2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/text_number"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/TIL_percent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle2"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintBottom_toTopOf="@id/buttonCalculate"
        app:startIconDrawable="@drawable/ic_one">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/TIET_number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TIL_percent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:hint="@string/text_percent"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/buttonCalculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/TIL_number2"
        app:layout_constraintTop_toBottomOf="@id/tvTitle2"
        app:layout_constraintVertical_bias="0.0"
        app:prefixText="%"
        app:prefixTextColor="@color/purple_700"
        app:startIconDrawable="@drawable/ic_two">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TIET_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvResult2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvFooter"
        android:text="@string/resultText2"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:gravity="center"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/buttonCalculate"
        android:layout_marginTop="@dimen/default_margin"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginHorizontal="@dimen/default_margin"/>


    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
       android:text="@string/text_total"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:layout_margin="@dimen/big_margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCalculate"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TIL_number2"
        android:layout_marginHorizontal="@dimen/big_margin"
        android:layout_marginTop="@dimen/default_margin"
        app:icon="@drawable/ic_calculate"
        style="Widget.MaterialComponents.Button.OutlinedButton"/>
    <TextView
        android:id="@+id/tvFooter"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/footerName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult2"
        android:layout_margin="@dimen/big_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>